Attempt to fix background image on mobile

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -122,7 +122,8 @@
 /* Banner */
 
 	#banner {
-		background-size: 10em, 10em, auto, cover;
+		/* background-size: 10em, 10em, auto, cover; */
+		background-size: contain;
 		padding: 6em 0;
 	}
 
